--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
     <div class="cta">
         <div class="cta-box">
-            <div class="left">
+            <div class="cta-left">
                 <h1>Call to action! It's time!</h1>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <div class="right">
+            <div class="cta-right">
                 <button>Sign up</button>
             </div>
         </div>
